# Nikola_Georgiev_Portfolio.github.io

./: .gitmodules  index.html  index_updated.html  script.js  styles.css
Portfolio/Asset_Management_Portfolio/: .coverage  README.md  config.ini  main.py
Portfolio/Asset_Management_Portfolio/Asset_Info/: BankDeposit.csv  Bond.csv  CryptoCurency.csv  Stock.csv
Portfolio/Asset_Management_Portfolio/Classes/: Asset.py  BankDeposit.py  Bond.py  CryptoCurency.py  DebtAsset.py  EquityAsset.py  Stock.py
Portfolio/Crypto_Backtesting_Engine/: MLSignalStrategy.html  README.md  SmaCross.html  backtesting_exmp.py  binance_ipo.py  btc_strat.py  btc_strat_chat.py  btc_strat_zob.py  calc.py  full_backtest.py  known_symbols.json  main.py  stock_yaho.py
Portfolio/Crypto_Live_Engine/: Kernel.py  README.md  req.txt  run.py  signal_confirmation.py  test.py
Portfolio/IBKR_Trading_Engine/: README.md  docker-compose.yaml  res.json
Portfolio/Senior_Thesis/: CMakeLists.txt  README.md  requirements.txt
Portfolio/Senior_Thesis/network_analyzer/algorithms/: CMakeLists.txt  algos.cp311-win_amd64.pyd  algos.exp  module.cpp
Portfolio/Senior_Thesis/network_analyzer/algorithms/headers/: BaseAlgo.h  OcSvm.h
Portfolio/Senior_Thesis/network_analyzer/algorithms/implementation/: BaseAlgo.cpp  OcSvm.cpp
Portfolio/Snowbox/: README.md
Portfolio/Snowbox/config/: mountain.txt  (+1 more)
Portfolio/Volatility_Portfolio_Balancer/: README.md  enriched_stocks.csv  filtered_stocks.csv  historical_returns.xlsx  main.py  returns_stats.xlsx  returns_to_excel.py  score.py  stats.py  stocks_scored.csv  test.json
(+114 files in other folders)
